fix(Navbar): update style and display of scrollbar  (#2085)
* fix: hide overflowing view section names

* fix(navbar): change scrollbar style and position

* fix: handle firefox

--- a/src/assets/css/new/scrollbars.less
+++ b/src/assets/css/new/scrollbars.less
@@ -22,3 +22,8 @@
 *:hover > ::-webkit-scrollbar-thumb {
     visibility: visible;
 }
+
+:global {
+    scrollbar-color: var(--neutral-grey-3) var(--neutral-grey-2);
+    scrollbar-width: thin;
+}
