--- a/src/pages/tickets/navbar/TicketNavbarSection.less
+++ b/src/pages/tickets/navbar/TicketNavbarSection.less
@@ -4,6 +4,7 @@
         align-items: center;
         flex-grow: 1;
         padding: 4px 12px;
+        overflow: hidden;
     }
 
     .name {
